app/backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend
  namespace: default
spec:
  type: ClusterIP   # <--- This is the key change
  selector:
    app: nodejs-backend
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
